--- a/app/src/main/res/layout/activity_main_items.xml
+++ b/app/src/main/res/layout/activity_main_items.xml
@@ -11,6 +11,14 @@
                android:src="@drawable/placeholder" android:scaleType="centerCrop" android:layout_marginTop="10dp"
                android:id="@+id/image"/>
 
+    <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:visibility="gone"
+            android:layout_centerVertical="true" />
+
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:textSize="16sp" android:layout_gravity="end" android:text="bytes" android:textStyle="normal"
               android:textColor="#000" android:layout_marginBottom="10dp" android:layout_marginTop="10dp"
